--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: arsenica, sans-serif;
+  font-family: butler, sans-serif;
   color: variables.$black;
 }
 
