--- a/assets/styles/_fonts.scss
+++ b/assets/styles/_fonts.scss
@@ -3,73 +3,43 @@
 // --- style: normal ---
 
 @font-face {
-  font-family: 'arsenica';
-  src: url(/fonts/Arsenica-Thin.ttf);
+  font-family: 'butler';
+  src: url(/fonts/Butler_Ultra_Light.otf);
   font-weight: variables.$thin;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'arsenica';
-  src: url(/fonts/Arsenica-Light.ttf);
+  font-family: 'butler';
+  src: url(/fonts/Butler_Light.otf);
   font-weight: variables.$light;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'arsenica';
-  src: url(/fonts/Arsenica-Regular.ttf);
+  font-family: 'butler';
+  src: url(/fonts/Butler_Regular.otf);
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'arsenica';
-  src: url(/fonts/Arsenica-Demibold.ttf);
+  font-family: 'butler';
+  src: url(/fonts/Butler_Medium.otf);
   font-weight: variables.$medium;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'arsenica';
-  src: url(/fonts/Arsenica-Medium.ttf);
-  font-weight: variables.$semi-bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'arsenica';
-  src: url(/fonts/Arsenica-Bold.ttf);
+  font-family: 'butler';
+  src: url(/fonts/Butler_Bold.otf);
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'arsenica';
-  src: url(/fonts/Arsenica-Extrabold.ttf);
+  font-family: 'butler';
+  src: url(/fonts/Butler_Extrabold.otf);
   font-weight: variables.$extra-bold;
   font-style: normal;
-}
-
-// --- style: italic ---
-
-@font-face {
-  font-family: 'arsenica';
-  src: url(/fonts/Arsenica-Regular.ttf);
-  font-weight: normal;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'arsenica';
-  src: url(/fonts/Arsenica-Regular.ttf);
-  font-weight: normal;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'arsenica';
-  src: url(/fonts/Arsenica-Demibold.ttf);
-  font-weight: variables.$semi-bold;
-  font-style: italic;
 }
