font weight fix

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -3,8 +3,8 @@ $thin: 100;
 $light: 300;
 $medium: 500;
 $semi-bold: 600;
-$extra-bold: 800;
+$extra-bold: 900;
 
 // --- colors ---
-$yellow: #FECE2F;
+$yellow: #fece2f;
 $black: #353535;
