--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,4 +1,4 @@
-@use 'fonts';
+@use "fonts";
 
 * {
   margin: 0;
@@ -6,6 +6,13 @@
   box-sizing: border-box;
   font-family: butler, sans-serif;
   color: variables.$black;
+
+  user-drag: none;
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 html,
